--- a/src/app/ideation/components/idea-reply/idea-reply.component.html
+++ b/src/app/ideation/components/idea-reply/idea-reply.component.html
@@ -1,5 +1,5 @@
 <div class="argument">
-  <div class="argument_wrap" [ngClass]="argument.type" id="{{argument.id + '_v' + (argument.edits.length-1)}}">
+  <div class="argument_wrap idea_reply" id="{{argument.id + '_v' + (argument.edits.length-1)}}">
     <div class="argument_content_wrap">
       <div class="argument_header">
         <div class="header_left">
