--- a/src/app/ideation/components/add-ideas-to-folder/add-ideas-to-folder.component.scss
+++ b/src/app/ideation/components/add-ideas-to-folder/add-ideas-to-folder.component.scss
@@ -58,3 +58,18 @@
     }
   }
 }
+
+.folder_info_wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+  padding: 16px 16px 32px 16px;
+
+  .folder_wrap {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 16px;
+  }
+}
