--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -122,7 +122,8 @@
                   </div>
                 </div>
                 <div class="right">
-                  <button class="btn_medium_submit animate" *ngIf="selectedFolder" (click)="addIdeasToFolder(selectedFolder)">
+                  <button class="btn_medium_submit animate" *ngIf="selectedFolder && canUpdate()"
+                    (click)="addIdeasToFolder(selectedFolder)">
                     <span translate="COMPONENTS.TOPIC_IDEATION.BTN_ADD_YOUR_IDEA"></span></button>
                 </div>
               </div>
@@ -221,14 +222,11 @@
                     <div class="selection">
                       <div class="selected_item">
                         <span *ngIf="!ideaFilters.participants" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL"></span>
-
-                        <span *ngIf="ideaFilters.type === 'favourite'"> {{'VIEWS.GROUP.FILTER_FAVOURITED' |
-                          translate}}</span>
-                        <span *ngIf="ideaFilters.type === 'showModerated'">
-                          {{'VIEWS.GROUP.FILTER_MODERATED'
-                          |
-                          translate}}</span>
-
+                        <div class="author_wrap" *ngIf="ideaFilters.participants">
+                          <div class="author_name">
+                            {{ideaFilters.participants.name}}
+                          </div>
+                        </div>
                       </div>
                       <div><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                           xmlns="http://www.w3.org/2000/svg">
@@ -237,12 +235,71 @@
                       </div>
                     </div>
                     <div class="options">
-                      <div class="option" (click)="setType('')" translate="VIEWS.GROUP.FILTER_ALL">
+                      <div class="option" (click)="setParticipant()" translate="VIEWS.GROUP.FILTER_ALL">
                       </div>
-                      <div *ngIf="(AuthService.loggedIn$ | async)" class="option" (click)="setType('favourite')"
-                        translate="VIEWS.GROUP.FILTER_FAVOURITED">
+                      <ng-container *ngIf="participants$ | async as participants;">
+                        <ng-container *ngFor="let user of participants">
+                          <div class="option" (click)="setParticipant(user)">
+                            <div class="author_wrap">
+                              <div class="image_wrap">
+                                <img class="profile_image" *ngIf="user.imageUrl" [src]="user.imageUrl">
+                                <div class="profile_image_filler" *ngIf="!user.imageUrl">
+                                  <cos-initials *ngIf="user.name" [name]="user.name">
+                                  </cos-initials>
+                                </div>
+                              </div>
+                              <div class="author_name">
+                                {{user.name}}
+                              </div>
+                            </div>
+                          </div>
+                        </ng-container>
+                      </ng-container>
+                    </div>
+                  </div>
+                  <div class="selected_participant_wrap" *ngIf="ideaFilters.participants">
+                    <div class="participant_row">
+                      <div class="author_wrap" *ngIf="ideaFilters.participants">
+                        <div class="image_wrap">
+                          <img class="profile_image" *ngIf="ideaFilters.participants.imageUrl"
+                            [src]="ideaFilters.participants.imageUrl">
+                          <div class="profile_image_filler" *ngIf="!ideaFilters.participants.imageUrl">
+                            <cos-initials *ngIf="ideaFilters.participants.name" [name]="ideaFilters.participants.name">
+                            </cos-initials>
+                          </div>
+                        </div>
+                        <div class="author_name">
+                          {{ideaFilters.participants.name}}
+                        </div>
                       </div>
-                      <div class="option" (click)="setType('showModerated')" translate="VIEWS.GROUP.FILTER_MODERATED">
+                      <button class="btn_medium_plain icon animate" (click)="setParticipant()">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289Z"
+                            fill="#2C3B47" />
+                        </svg>
+                      </button>
+                    </div>
+                    <div class="line_separator"></div>
+                    <div class="info_wrap">
+                      <div class="info_text">
+                        <span translate="COMPONENTS.TOPIC_IDEATION.IDEA_PARTICIPANTS_FILTER_RESULTS" [translateParams]="{count: participantsCount}"></span>
+                      </div>
+                      <div class="buttons_wrap">
+                        <div class="text"></div>
+                        <button (click)="nextParticipant()"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.5 7.5L9.5 12.5L14.5 17.5" stroke="#2C3B47" stroke-width="2"
+                              stroke-linecap="round" />
+                          </svg>
+                        </button>
+                        <button (click)="prevParticipant()"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9.5 17.5L14.5 12.5L9.5 7.5" stroke="#2C3B47" stroke-width="2"
+                              stroke-linecap="round" />
+                          </svg>
+
+                        </button>
                       </div>
                     </div>
                   </div>
