--- a/src/app/account/components/profile/profile.component.html
+++ b/src/app/account/components/profile/profile.component.html
@@ -49,7 +49,8 @@
             </a>
             <ng-container *ngIf="uploadedImage">
               <div class="profile_image_filler">
-                <image-editor [width]="160" [heigth]="160" [file]="uploadedImage" (item)="imageChange($event)"></image-editor>
+                <image-editor [width]="160" [heigth]="160" [file]="uploadedImage"
+                  (item)="imageChange($event)"></image-editor>
               </div>
             </ng-container>
             <img id="profile_image" *ngIf="form.imageUrl && !uploadedImage" [src]="form.imageUrl">
@@ -144,6 +145,30 @@
             </div>
           </form>
           <div class="small_heading" translate="VIEWS.ACCOUNT.TAB_PREFERENCES"></div>
+
+          <div class="prefrence_box">
+            <div class="preference_title bold" translate="VIEWS.ACCOUNT.LBL_PROFILE_LANGUAEG"></div>
+            <div class="preference_description" translate="VIEWS.ACCOUNT.LBL_PROFILE_LANGUAEG_DESCRIPTION">
+            </div>
+
+            <cos-input [placeholder]="'VIEWS.ACCOUNT.LBL_SELECT_PROFILE_LANGUAEG' | uppercase | translate">
+              <div class="dropdown" [cosDropdown] id="profile_language_selector">
+                <div class="selection">
+                  <div class="selected_item">{{languages$[form.language]}}</div>
+                  <div><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M17 10L12 15L7 10" stroke="#2C3B47" stroke-width="2" stroke-linecap="round" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="options">
+                  <ng-container *ngFor="let language of languages$ | keyvalue;">
+                    <div class="option" (click)="setProfileLanguage(language.key)">{{language.value}}</div>
+                  </ng-container>
+                </div>
+              </div>
+            </cos-input>
+          </div>
+
           <div class="prefrence_box">
             <div class="preference_title bold" translate="VIEWS.ACCOUNT.LBL_SHOW_IN_SEARCH"></div>
             <div class="preference_description" translate="VIEWS.ACCOUNT.LBL_SHOW_IN_SEARCH_DESCRIPTION">
@@ -241,7 +266,9 @@
             <div class="row_cell" translate="VIEWS.ACCOUNT.TABLE_HEADER_NOTIFICATIONS"></div>
           </div>
           <div class="row_list" *ngFor="let topic of topics$ | async">
-            <div class="row_cell"><a class="blue_link" [routerLink]="['/', translate.currentLang, 'topics', topic.topicId]" target="_blank">{{topic.title}}</a></div>
+            <div class="row_cell"><a class="blue_link"
+                [routerLink]="['/', translate.currentLang, 'topics', topic.topicId]" target="_blank">{{topic.title}}</a>
+            </div>
             <div class="row_cell"><cos-toggle [cosToggleTextOn]="'TOGGLE_ON' | translate"
                 [cosToggleTextOff]="'TOGGLE_OFF' | translate" [model]="topic.allowNotifications"
                 (click)="topic.allowNotifications=!topic.allowNotifications;toggleTopicNotifications(topic)"></cos-toggle>
