--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -396,7 +396,7 @@
         </div>
         <div class="nav_create_menu_wrap" [ngClass]="{'hidden': !showNavCreate}">
           <div class="create_menu_item" [routerLink]="['/', translate.currentLang, 'topics', 'ideation', 'create']"
-            routerLinkActive="active" dialog-close>
+            routerLinkActive="active">
             <div class="left_wrap">
               <div class="icon_wrap">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -419,7 +419,7 @@
             </div>
           </div>
           <div class="create_menu_item" [routerLink]="['/', translate.currentLang, 'topics', 'create']"
-            routerLinkActive="active" dialog-close>
+            routerLinkActive="active">
             <div class="left_wrap">
               <div class="icon_wrap">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -463,7 +463,7 @@
         </div-->
 
           <div class="create_menu_item" [routerLink]="['/', translate.currentLang, 'topics', 'vote', 'create']"
-            routerLinkActive="active" dialog-close>
+            routerLinkActive="active">
             <div class="left_wrap">
               <div class="icon_wrap">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -488,7 +488,7 @@
           <div class="line_separator"></div>
 
           <div class="create_menu_item" [routerLink]="['/', translate.currentLang, 'my', 'groups', 'create']"
-            routerLinkActive="active" dialog-close>
+            routerLinkActive="active">
             <div class="left_wrap">
               <div class="icon_wrap">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
