Add idea reply report flows

--- a/src/app/ideation/components/idea-reply-form/idea-reply-form.component.html
+++ b/src/app/ideation/components/idea-reply-form/idea-reply-form.component.html
@@ -3,9 +3,9 @@
   <ng-template #loggedIn>
     <form name="argumentReply">
       <cos-input
-        placeholder="{{'COMPONENTS.ARGUMENT_REPLY.SUBJECT_CHARACTERS_LEFT' | translate:{chars: reply.subject.length, charsLeft: ARGUMENT_SUBJECT_MAXLENGTH} }}">
+        placeholder="{{'COMPONENTS.IDEA_REPLY_FORM.SUBJECT_CHARACTERS_LEFT' | translate:{chars: reply.subject.length, charsLeft: ARGUMENT_SUBJECT_MAXLENGTH} }}">
         <input id="argument_subject" name="subject" [(ngModel)]="reply.subject"
-          placeholder="{{'COMPONENTS.ARGUMENT_REPLY.PLACEHOLDER_ADD_SUBJECT_TO_ARGUMENT' | translate:{chars: reply.subject.length, charsLeft: ARGUMENT_SUBJECT_MAXLENGTH} }}"
+          placeholder="{{'COMPONENTS.IDEA_REPLY_FORM.PLACEHOLDER_ADD_SUBJECT_TO_ARGUMENT' | translate:{chars: reply.subject.length, charsLeft: ARGUMENT_SUBJECT_MAXLENGTH} }}"
           class="gray_borders" [ngClass]="{'error_input': errors?.subject}"
           [attr.maxlength]="ARGUMENT_SUBJECT_MAXLENGTH" required>
         <label for="argument_subject" class="error_label" *ngIf="errors?.subject">
@@ -17,9 +17,9 @@
           <span translate="{{errors.subject}}"></span>
         </label>
       </cos-input>
-      <textarea cosmarkdown cosmarkdowntranslatecharacterstatuskey="COMPONENTS.ARGUMENT_REPLY.CHARACTER_LIMIT"
+      <textarea cosmarkdown cosmarkdowntranslatecharacterstatuskey="COMPONENTS.IDEA_REPLY_FORM.CHARACTER_LIMIT"
         id="argument_reply_text" [(item)]="reply.text" class="gray_borders" [ngClass]="{'error_input': errors?.text}"
-        placeholder="{{'COMPONENTS.ARGUMENT_REPLY.PLACEHOLDER_WRITE_REPLY_HERE' | translate}}"
+        placeholder="{{'COMPONENTS.IDEA_REPLY_FORM.PLACEHOLDER_WRITE_REPLY_HERE' | translate}}"
         [limit]="ARGUMENT_TYPES_MAXLENGTH['reply']"></textarea><!--(keyup)="argumentTextLengthCheck(form, form.text)"-->
       <label for="argument_reply_text" class="error_label" *ngIf="errors?.text">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -40,7 +40,7 @@
           </button>
         </div>
         <div>
-          <div class="btn_medium_submit bold" (click)="saveReply()" translate="COMPONENTS.ARGUMENT_REPLY.BTN_POST_REPLY">
+          <div class="btn_medium_submit bold" (click)="(editMode)? saveEdit(): saveReply();" [translate]="(editMode)? 'COMPONENTS.IDEA_REPLY_FORM.BTN_UPDATE_REPLY': 'COMPONENTS.IDEA_REPLY_FORM.BTN_POST_REPLY'">
           </div>
         </div>
       </div>
