--- a/src/app/ideation/components/idea/idea-dialog.component.scss
+++ b/src/app/ideation/components/idea/idea-dialog.component.scss
@@ -156,6 +156,10 @@
   gap: 16px;
   padding-top: 24px;
 
+  .line_separator {
+    background-color: var(--color-dialog-contrast);
+  }
+
   .items_wrap {
     align-items: center;
     display: flex;
