--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -40,12 +40,11 @@
         </div>
       </ng-container>
       <ng-container *ngIf="idea.deletedBy?.id === idea.author.id && !idea.deletedReasonType && !idea.deletedReasonText">
-        <div class="bold"
-        [innerHtml]="'COMPONENTS.IDEABOX.IDEA_AUTHOR_REMOVED_IDEA' | translate">
-      </div>
-      <div class="buttons_wrap">
-        <a  (click)="goToView($event)" translate="COMPONENTS.IDEABOX.NOTIFICATION_LNK_VIEW"></a>
-      </div>
+        <div class="bold" [innerHtml]="'COMPONENTS.IDEABOX.IDEA_AUTHOR_REMOVED_IDEA' | translate">
+        </div>
+        <div class="buttons_wrap">
+          <a (click)="goToView($event)" translate="COMPONENTS.IDEABOX.NOTIFICATION_LNK_VIEW"></a>
+        </div>
       </ng-container>
     </div>
   </div>
@@ -60,7 +59,8 @@
       </div>
       <ng-container *ngIf="(Auth.loggedIn$ | async)">
         <div class="vertical_line_separator"></div>
-        <button class="btn_small_plain icon" (click)="$event.preventDefault();$event.stopPropagation();toggleFavourite();">
+        <button class="btn_small_plain icon"
+          (click)="$event.preventDefault();$event.stopPropagation();toggleFavourite();">
           <svg *ngIf="!idea.favourite" width="24" height="24" viewBox="0 0 24 24" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -168,27 +168,38 @@
       </div>
     </div>
   </div>
-  <a class="idea_content" (click)="(!idea.report.id)? goToView($event): ''" >
+  <a class="idea_content" (click)="(!idea.report.id)? goToView($event): ''">
     <div class="statement" [innerHTML]="idea.statement"></div>
-    <div class="btn_like_wrap">
-      <button class="btn_medium_plain btn_like" (click)="$event.preventDefault();$event.stopPropagation();doIdeaVote(1);">
+    <div class="btn_like_wrap" [ngClass]="{selected: this.idea.votes.up.selected}">
+      <button class="btn_medium_plain btn_like"
+        (click)="$event.preventDefault();$event.stopPropagation();doIdeaVote(1);">
         <div class="icon">
-          <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <mask id="path-1-inside-1_12557_36360" fill="white">
+          <ng-container *ngIf="!this.idea.votes.up.selected">
+            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <mask id="path-1-inside-1_12557_36360" fill="white">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4.5 8.23052C4.5 5.75213 6.4675 4 8.50006 4C10.5327 4 12.5 5.7523 12.5 8.23052C12.5 9.98094 11.8561 10.9778 11.2695 11.886C10.8399 12.5512 10.441 13.1688 10.3483 14L6.65595 14C6.56314 13.1686 6.16341 12.551 5.73288 11.8858C5.14514 10.9776 4.5 9.9808 4.5 8.23052ZM8.5 17C9.60457 17 10.5 16.1046 10.5 15L6.5 15C6.5 16.1046 7.39543 17 8.5 17Z" />
+              </mask>
+              <path
+                d="M11.2695 11.886L12.1095 12.4286L12.1095 12.4286L11.2695 11.886ZM10.3483 14V15H11.2429L11.3421 14.1109L10.3483 14ZM6.65595 14L5.66212 14.1109L5.76137 15H6.65595V14ZM5.73288 11.8858L4.89336 12.4291H4.89336L5.73288 11.8858ZM10.5 15H11.5V14H10.5V15ZM6.5 15V14H5.5V15H6.5ZM8.50006 3C5.91284 3 3.5 5.20223 3.5 8.23052H5.5C5.5 6.30203 7.02216 5 8.50006 5V3ZM13.5 8.23052C13.5 5.20247 11.0874 3 8.50006 3V5C9.97794 5 11.5 6.30212 11.5 8.23052L13.5 8.23052ZM12.1095 12.4286C12.7163 11.4892 13.5 10.2852 13.5 8.23052L11.5 8.23052C11.5 9.67669 10.996 10.4664 10.4295 11.3435L12.1095 12.4286ZM11.3421 14.1109C11.4051 13.5465 11.6655 13.116 12.1095 12.4286L10.4295 11.3435C10.0143 11.9863 9.47694 12.7911 9.35442 13.8891L11.3421 14.1109ZM6.65595 15L10.3483 15V13L6.65595 13V15ZM4.89336 12.4291C5.3384 13.1167 5.59917 13.547 5.66212 14.1109L7.64978 13.8891C7.52712 12.7903 6.98842 11.9852 6.5724 11.3424L4.89336 12.4291ZM3.5 8.23052C3.5 10.2856 4.28553 11.4899 4.89336 12.4291L6.5724 11.3424C6.00474 10.4653 5.5 9.67597 5.5 8.23052H3.5ZM9.5 15C9.5 15.5523 9.05228 16 8.5 16L8.5 18C10.1569 18 11.5 16.6569 11.5 15L9.5 15ZM6.5 16L10.5 16V14L6.5 14V16ZM8.5 16C7.94772 16 7.5 15.5523 7.5 15H5.5C5.5 16.6569 6.84315 18 8.5 18L8.5 16Z"
+                fill="#2C3B47" mask="url(#path-1-inside-1_12557_36360)" />
+              <rect x="14.5098" y="3.19531" width="2" height="1" rx="0.5" transform="rotate(135 14.5098 3.19531)"
+                fill="#2C3B47" />
+              <rect x="9" y="0.5" width="2" height="1" rx="0.5" transform="rotate(90 9 0.5)" fill="#2C3B47" />
+              <rect x="3.19727" y="2.48828" width="2" height="1" rx="0.5" transform="rotate(45 3.19727 2.48828)"
+                fill="#2C3B47" />
+              <rect x="0.5" y="8" width="2" height="1" rx="0.5" fill="#2C3B47" />
+              <rect x="14.5" y="8" width="2" height="1" rx="0.5" fill="#2C3B47" />
+            </svg>
+          </ng-container>
+          <ng-container *ngIf="this.idea.votes.up.selected">
+            <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M4.5 8.23052C4.5 5.75213 6.4675 4 8.50006 4C10.5327 4 12.5 5.7523 12.5 8.23052C12.5 9.98094 11.8561 10.9778 11.2695 11.886C10.8399 12.5512 10.441 13.1688 10.3483 14L6.65595 14C6.56314 13.1686 6.16341 12.551 5.73288 11.8858C5.14514 10.9776 4.5 9.9808 4.5 8.23052ZM8.5 17C9.60457 17 10.5 16.1046 10.5 15L6.5 15C6.5 16.1046 7.39543 17 8.5 17Z" />
-            </mask>
-            <path
-              d="M11.2695 11.886L12.1095 12.4286L12.1095 12.4286L11.2695 11.886ZM10.3483 14V15H11.2429L11.3421 14.1109L10.3483 14ZM6.65595 14L5.66212 14.1109L5.76137 15H6.65595V14ZM5.73288 11.8858L4.89336 12.4291H4.89336L5.73288 11.8858ZM10.5 15H11.5V14H10.5V15ZM6.5 15V14H5.5V15H6.5ZM8.50006 3C5.91284 3 3.5 5.20223 3.5 8.23052H5.5C5.5 6.30203 7.02216 5 8.50006 5V3ZM13.5 8.23052C13.5 5.20247 11.0874 3 8.50006 3V5C9.97794 5 11.5 6.30212 11.5 8.23052L13.5 8.23052ZM12.1095 12.4286C12.7163 11.4892 13.5 10.2852 13.5 8.23052L11.5 8.23052C11.5 9.67669 10.996 10.4664 10.4295 11.3435L12.1095 12.4286ZM11.3421 14.1109C11.4051 13.5465 11.6655 13.116 12.1095 12.4286L10.4295 11.3435C10.0143 11.9863 9.47694 12.7911 9.35442 13.8891L11.3421 14.1109ZM6.65595 15L10.3483 15V13L6.65595 13V15ZM4.89336 12.4291C5.3384 13.1167 5.59917 13.547 5.66212 14.1109L7.64978 13.8891C7.52712 12.7903 6.98842 11.9852 6.5724 11.3424L4.89336 12.4291ZM3.5 8.23052C3.5 10.2856 4.28553 11.4899 4.89336 12.4291L6.5724 11.3424C6.00474 10.4653 5.5 9.67597 5.5 8.23052H3.5ZM9.5 15C9.5 15.5523 9.05228 16 8.5 16L8.5 18C10.1569 18 11.5 16.6569 11.5 15L9.5 15ZM6.5 16L10.5 16V14L6.5 14V16ZM8.5 16C7.94772 16 7.5 15.5523 7.5 15H5.5C5.5 16.6569 6.84315 18 8.5 18L8.5 16Z"
-              fill="#2C3B47" mask="url(#path-1-inside-1_12557_36360)" />
-            <rect x="14.5098" y="3.19531" width="2" height="1" rx="0.5" transform="rotate(135 14.5098 3.19531)"
-              fill="#2C3B47" />
-            <rect x="9" y="0.5" width="2" height="1" rx="0.5" transform="rotate(90 9 0.5)" fill="#2C3B47" />
-            <rect x="3.19727" y="2.48828" width="2" height="1" rx="0.5" transform="rotate(45 3.19727 2.48828)"
-              fill="#2C3B47" />
-            <rect x="0.5" y="8" width="2" height="1" rx="0.5" fill="#2C3B47" />
-            <rect x="14.5" y="8" width="2" height="1" rx="0.5" fill="#2C3B47" />
-          </svg>
+                d="M8 0.5C8.27614 0.5 8.5 0.723858 8.5 1V2C8.5 2.27614 8.27614 2.5 8 2.5C7.72386 2.5 7.5 2.27614 7.5 2V1C7.5 0.723858 7.72386 0.5 8 0.5ZM13.6567 3.54984C13.852 3.35458 13.852 3.038 13.6567 2.84274C13.4614 2.64747 13.1449 2.64747 12.9496 2.84274L12.2425 3.54984C12.0472 3.7451 12.0472 4.06169 12.2425 4.25695C12.4377 4.45221 12.7543 4.45221 12.9496 4.25695L13.6567 3.54984ZM8.00006 4C5.9675 4 4 5.75213 4 8.23052C4 9.9808 4.64514 10.9776 5.23288 11.8858C5.66341 12.551 6.06314 13.1686 6.15595 14H9.84826C9.941 13.1688 10.3399 12.5512 10.7695 11.886C11.3561 10.9778 12 9.98094 12 8.23052C12 5.7523 10.0327 4 8.00006 4ZM10 15C10 16.1046 9.10457 17 8 17C6.89543 17 6 16.1046 6 15H10ZM3.05033 2.84281C2.85507 2.64755 2.53849 2.64755 2.34322 2.84281C2.14796 3.03807 2.14796 3.35466 2.34322 3.54992L3.05033 4.25702C3.24559 4.45229 3.56218 4.45229 3.75744 4.25702C3.9527 4.06176 3.9527 3.74518 3.75744 3.54992L3.05033 2.84281ZM0 8.5C0 8.22386 0.223858 8 0.5 8H1.5C1.77614 8 2 8.22386 2 8.5C2 8.77614 1.77614 9 1.5 9H0.5C0.223858 9 0 8.77614 0 8.5ZM14.5 8C14.2239 8 14 8.22386 14 8.5C14 8.77614 14.2239 9 14.5 9H15.5C15.7761 9 16 8.77614 16 8.5C16 8.22386 15.7761 8 15.5 8H14.5Z"
+                fill="#2C3B47" />
+            </svg>
+
+          </ng-container>
         </div>
       </button>
       <div class="like_counter_wrap" [innerHTML]="idea.votes.up.count">
