--- a/src/app/ideation/components/ideabox/ideabox.component.scss
+++ b/src/app/ideation/components/ideabox/ideabox.component.scss
@@ -101,7 +101,19 @@
       align-self: center;
       flex-direction: row;
       border: 2px solid var(--color-dialog-ideation);
+      transition: all 200ms ease-in;
 
+      &.selected {
+        flex-direction: row-reverse;
+        background-color: var(--color-ideation);
+        border: 2px solid var(--color-ideation);
+        .btn_like {
+          background-color: var(--color-surfaces);
+        }
+        .like_counter_wrap {
+          font-weight: 600;
+        }
+      }
       .btn_like {
         width: 40px;
         height: 40px;
