--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -124,7 +124,7 @@
                 <div class="right">
                   <button class="btn_medium_submit animate" *ngIf="selectedFolder && canUpdate()"
                     (click)="addIdeasToFolder(selectedFolder)">
-                    <span translate="COMPONENTS.TOPIC_IDEATION.BTN_ADD_YOUR_IDEA"></span></button>
+                    <span translate="COMPONENTS.TOPIC_IDEATION.BTN_ADD_IDEAS_TO_FOLDER"></span></button>
                 </div>
               </div>
               <ng-container
