--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -1,4 +1,4 @@
-<a class="idea" [ngClass]="{'moderated': idea.report.id}">
+<a class="idea" [ngClass]="{'moderated': idea.report.id, 'new': isNew}">
   <!--div class="moderated_topic">
     <div class="notification">
       <div>
