--- a/src/app/ideation/components/edit-idea/edit-idea.component.html
+++ b/src/app/ideation/components/edit-idea/edit-idea.component.html
@@ -57,7 +57,7 @@
     </div>
     <div id="navigate_create">
       <div id="chars_left" translate="COMPONENTS.EDIT_IDEA.IDEA_TYPE_CHARACTER_LIMIT"
-        [translateParams]="{numberOfCharacters: ideaMaxLength() - (ideaForm.value['description']?.length || 0)}"></div>
+        [translateParams]="{chars: ideaMaxLength(), charsLeft: ideaMaxLength() - (ideaForm.value['description']?.value.length || 0)}"></div>
       <!--button class="btn_big_submit_ghost">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
