--- a/src/app/ideation/components/ideabox/ideabox.component.scss
+++ b/src/app/ideation/components/ideabox/ideabox.component.scss
@@ -8,7 +8,14 @@
   background-color: var(--color-dialog-ideation-contrast);
   height: 280px;
   width: 264px;
+  transition: all ease-in 200ms;
+  &.new {
+    background-color: var(--color-success-background);
 
+    .btn_like_wrap {
+      background-color: var(--color-success-background);
+    }
+  }
   &:hover {
     text-decoration: none;
   }
@@ -83,12 +90,26 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    text-decoration: none;
+
     .statement {
       color: var(--color-text);
       font-size: 16px;
       font-style: normal;
       font-weight: 600;
       line-height: 24px;
+
+      &:hover {
+        color: var(--color-link);
+        text-decoration: none;
+      }
+    }
+
+    &:hover {
+      .statement {
+        color: var(--color-link);
+        text-decoration: none;
+      }
     }
 
     .btn_like_wrap {
